Update code for chatbot AI gemini

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -91,6 +91,8 @@ services:
       - JWT_SIGNER_KEY=${JWT_SIGNER_KEY}
       - JWT_VALID_DURATION=${JWT_VALID_DURATION}
       - JWT_REFRESHABLE_DURATION=${JWT_REFRESHABLE_DURATION}
+      - API_URL=${API_URL}
+      - API_KEY=${API_KEY}
     depends_on:
       mysql:
         condition: service_healthy
