--- a/BackEnd/src/main/resources/application.yml
+++ b/BackEnd/src/main/resources/application.yml
@@ -17,12 +17,17 @@ spring:
     multipart:
       max-file-size: 50MB
       max-request-size: 50MB
+    session:
+      timeout: 30m
   kafka:
     bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS}
   data:
     redis:
       port: ${REDIS_PORT}
       host: ${REDIS_HOST}
+    gemini:
+      api-url: ${API_URL}
+      api-key: ${API_KEY}
   mail:
     from: ${SPRING_MAIL_FROM}
     host: ${SPRING_MAIL_HOST}
