--- a/FrontEnd/Dockerfile
+++ b/FrontEnd/Dockerfile
@@ -12,6 +12,7 @@ RUN npm run build
 # Stage 2: Sử dụng Nginx để phục vụ file tĩnh
 FROM nginx:alpine
 COPY --from=build /app/build /usr/share/nginx/html
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
 
